<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/Email1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"/>

    <EditText
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_below="@id/Email1"/>

    <TextView
        android:id="@+id/Password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Email"
        android:text="@string/password"/>

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Password1"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/ForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Password"
        android:text="@string/forgotpassword"/>

    <Button
        android:id="@+id/Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ForgotPassword"
        android:onClick="LoginClick"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/OR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Login"
        android:gravity="center"
        android:text="@string/or"/>

    <Button
        android:id="@+id/CreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/OR"
        android:onClick="CreateAccount"
        android:text="@string/createaccount"/>

    <Button
        android:id="@+id/GuestLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/CreateAccount"
        android:onClick="GuestLogin"
        android:text="@string/guestlogin"/>




</RelativeLayout>