<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    tools:context=".CreateAccount">

    <EditText
        android:id="@+id/Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/CreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:layout_below="@id/Name"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/CreatePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:layout_below="@id/CreateAccount"/>

    <ProgressBar
        android:id="@+id/ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:visibility="gone"
        android:padding="200dp"
        android:layout_below="@id/CreatePassword"/>

    <Button
        android:id="@+id/Signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/CreatePassword"
        android:text="@string/createaccount"/>

    <TextView
        android:id="@+id/Alreadyhaveacount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Signup"
        android:gravity="center"
        android:paddingTop="500dp"
        android:text="@string/alreadyamember"/>

</RelativeLayout>